--- a/index.html
+++ b/index.html
@@ -2,11 +2,149 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
+    <meta name="viewport" content="width=device-width, initial scale=1">
+    <title>Sedona</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header>
+      <nav>
+        <a href="#">Информация</a>
+        <a href="#"> Фото и видео</a>
+        <a><img src="img/logo.svg"></a>
+        <a href="#">Карта штата</a>
+        <a href="#"> Гостиницы</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        
+        <p>
+          WELCOME<br>
+          to the gorgeous
+        </p>
+        <h1>SEDONA</h1>
+        <p>"Because the Grand Canyon sucks!"</p>
+      </section>
+      <section>
+        <h2>О городке</h2>
+        <p>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ,<br>
+           ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</p>
+        <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
+      </section>
+      <section>
+        <h2>Преимущества</h2>
+        <ul>
+          <li>
+            <h3>НАСТОЯЩИЙ ГОРОДОК</h3>
+            <p>— №1 —</p>
+            <p>Седона — не аттракцион для туристов, там<br>
+               течёт своя жизнь</p>
+            <img src="img/image.png">
+          </li>
+          <li>
+            <img src="img/icon/icon-1.png" width="75" height="72">
+            <h3>ЖИЛЬЁ</h3>
+            <p>Рекомендуем пожить в настоящем<br>
+               мотеле, всё как в кино!</p>
+          </li>
+          <li>
+            <img src="img/icon/icon-2.png">
+            <h3>ЕДА</h3>
+            <p>Всегда заказывайте фирменный бургер,<br>
+               вы не разочаруетесь!</p>
+          </li>
+          <li>
+            <img src="img/icon/icon-3.png">
+            <h3>СУВЕНИРЫ</h3>
+            <p>Не только китайского, но и местного<br>
+              производства!</p>
+          </li>
+          <li>
+            <img src="img/image (1).png" width="800" height="256">
+            <h3>ТАМ ЕСТЬ<br>
+              МОСТ ДЬЯВОЛА</h3>
+            <p>— №2 —</p>
+            <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО<br>
+              ВЫ ОСМЕЛИТЕСЬ</p>
+          </li>
+          <li>
+            <h3>НЕБОЛЬШАЯ<br>
+              ПЛОЩАДЬ</h3>
+            <p>— №3 —</p>
+            <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ<br>
+              НАХОДЯТЬСЯ ОЧЕНЬ БЛИЗКО</p>
+          </li>
+          <li>
+            <h3>КРАСИВАЯ<br>
+              ДОРОГА</h3>
+            <p>— №4 —</p>
+            <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ<br>
+              НЕ СКУЧНО!</p>
+          </li>
+          <li>
+            <h3>МАЛО<br>
+              ТУРИСТОВ</h3>
+            <p>— №5 —</p>
+            <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН<br>
+              И ТОЛПИТСЯ ТАМ</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+          <h2>Поиск гостиницы</h2>
+          <p>ЗАИНТЕРЕСОВАЛИСЬ?</p>
+          <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,<br>
+            И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>    
+          <form action="" method="get">
+            <a href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>  
+            <label>
+              Дата заезда:
+              <input type="date" date="2017-04-24" value="2017-04-24">
+            </label>
+            <label>
+              Дата выезда:
+              <input type="date" date="2017-08-04" value="2017-08-04">
+            </label>
+            <label>
+              Взрослые:
+              <input type="number" value="2">
+            </label>
+            <label>
+              Дети:
+              <input type="number" value="0">
+            </label>
+            <button type="submit">НАЙТИ</button>
+          </form>
+        </section>
+        <section>
+          <h2>Карта</h2>
+          <!-- Здесь будет карта -->
+        </section>
+    </main>
+    <footer>
+      <section>
+        <p>#VISITSEDONA</p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a href="#">Твиттер</a>
+          </li>
+          <li>
+            <a href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a href="#">Ютуб</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <span>WEBSITE BY</span>
+        <a href=htmlacademy.ru>
+          <img src="img/logo_htmlacademy.png">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
