--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="favicon@32.ico"> 
   <link rel="icon" href="img/icon/favicon/icon@16.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="normalize.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
